--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@
 
   --gray-color: #f2f4fd;
   --primary-color: #1d5d9b; /* rgb(29, 93, 155) */
+  --primary-yellow-collor: #ffea00;
   --black-color: #333132;
   --light-black-color: #353f4f;
 }
