--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -13,11 +13,13 @@
   overflow: initial !important;
   width: 100%;
   height: 100%;
-  // margin: 0 40px;
-  // max-width: 600px;
 
-  max-width: 670px !important;
-  min-height: 400px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  // max-width: 670px !important;
+  // min-height: 400px !important;
   transition: all 0.05s ease-in-out;
 }
 
@@ -125,12 +127,18 @@
   }
 }
 
+@media (max-width: 950px) {
+  .events__content {
+    max-width: calc(100% - 100px);
+  }
+}
+
 @media (max-width: 768px) {
   .events {
     margin-bottom: 140px;
   }
   .events__item {
-    width: 90%;
+    width: 70%;
   }
   .events__title {
     margin-bottom: 20px;
@@ -149,12 +157,14 @@
     background-color: var(--primary-color);
     color: #fff;
   }
+  .events__item {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 520px) {
   .events__item {
-    width: 100%;
-    margin: 0 20px;
+    width: 90%;
   }
   .events__date {
     margin-bottom: 10px;
