--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -83,6 +83,14 @@
   flex-direction: column;
   align-items: center;
 }
+
+.social__list {
+  list-style: none;
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
+
 .footer__social .social__list-item {
   border-color: #fff;
 }
