--- a/src/components/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.scss
@@ -5,6 +5,12 @@
   margin-bottom: 60px;
 }
 
+.breadcrumbs-container {
+  max-width: 1320px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
 .breadcrumbs__list {
   display: flex;
   align-items: center;
@@ -19,4 +25,26 @@
 
 .breadcrumbs__item:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 540px) {
+  .breadcrumbs {
+    padding: 15px 0;
+  }
+
+  .breadcrumbs-container {
+    padding: 0;
+  }
+
+  .breadcrumbs__item {
+    font-size: 13px;
+    margin: 0 8px;
+  }
+}
+
+@media (max-width: 540px) {
+  .breadcrumbs__item {
+    font-size: 12px;
+    margin: 0 6px;
+  }
 }
