--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -114,9 +114,20 @@ body {
 
 .main-photo-page img {
   object-fit: cover;
-  // object-position: 0px -60px;
   width: 100%;
   height: auto;
+}
+
+.cmk-main-photo {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.cmk-main-photo img {
+  object-position: 0px top;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  max-height: 400px;
 }
 
 .page-content {
