--- a/src/components/PageCard/PageCard.module.scss
+++ b/src/components/PageCard/PageCard.module.scss
@@ -1,18 +1,10 @@
-.main-title {
-  margin-bottom: 40px;
-}
-
-.smk-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .item {
   position: relative;
   margin: 15px;
-  width: calc(25% - 40px);
+  width: calc(25% - 30px);
   overflow: hidden;
   cursor: pointer;
+  min-height: 220px;
   padding-bottom: 30px;
 }
 
