--- a/src/components/PageContent/Page.module.scss
+++ b/src/components/PageContent/Page.module.scss
@@ -164,3 +164,9 @@
   margin-left: 5px;
 }
 /* // smk */
+
+.page-cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+}
