--- a/src/components/PageContent/PersonComponent.module.scss
+++ b/src/components/PageContent/PersonComponent.module.scss
@@ -20,8 +20,9 @@
 }
 
 .name {
-  font-size: 20px;
+  font-size: 22px;
   margin-bottom: 5px !important;
+  font-family: GilroyBold, sans-serif;
 }
 
 .position {
