--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,6 +83,10 @@ body {
 .title-sm.center {
   text-align: center;
 }
+
+.text-center {
+  text-align: center;
+}
 /* // title */
 
 .underline-animation {
