--- a/src/components/Videos/Videos.module.scss
+++ b/src/components/Videos/Videos.module.scss
@@ -96,70 +96,70 @@
 }
 /* // swiper */
 
-/* video full screen */
-.layoutClose {
-  visibility: hidden;
-  transition: all 0.2s ease-in-out;
-}
-.full-screen {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 1);
-  z-index: 100;
-  overflow: hidden;
-}
-.full-screen__inner {
-  height: 100vh;
-}
-.full-screen__content {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.closeIcon {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-}
+// /* video full screen */
+// .layoutClose {
+//   visibility: hidden;
+//   transition: all 0.2s ease-in-out;
+// }
+// .full-screen {
+//   position: fixed;
+//   width: 100%;
+//   height: 100vh;
+//   top: 0;
+//   left: 0;
+//   background-color: rgba(0, 0, 0, 1);
+//   z-index: 100;
+//   overflow: hidden;
+// }
+// .full-screen__inner {
+//   height: 100vh;
+// }
+// .full-screen__content {
+//   height: 100%;
+//   width: 100%;
+//   position: relative;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .closeIcon {
+//   position: absolute;
+//   top: 20px;
+//   right: 20px;
+//   cursor: pointer;
+// }
 
-.openModal {
-  animation-name: open-modal;
-  animation-duration: 0.3s;
-  animation-fill-mode: forwards;
-}
-@keyframes open-modal {
-  from {
-    opacity: 0;
-    transform: scale(1.5);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-.closeModal {
-  animation-name: close-modal;
-  animation-duration: 0.3s;
-  animation-fill-mode: forwards;
-}
-@keyframes close-modal {
-  from {
-    opacity: 1;
-    transform: scale(1);
-  }
-  to {
-    opacity: 0;
-    transform: scale(0.5);
-  }
-}
-/* // video full screen */
+// .openModal {
+//   animation-name: open-modal;
+//   animation-duration: 0.3s;
+//   animation-fill-mode: forwards;
+// }
+// @keyframes open-modal {
+//   from {
+//     opacity: 0;
+//     transform: scale(1.5);
+//   }
+//   to {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+// }
+// .closeModal {
+//   animation-name: close-modal;
+//   animation-duration: 0.3s;
+//   animation-fill-mode: forwards;
+// }
+// @keyframes close-modal {
+//   from {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+//   to {
+//     opacity: 0;
+//     transform: scale(0.5);
+//   }
+// }
+// /* // video full screen */
 
 @media (max-width: 840px) {
   .videos__slider-inner {
