--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .footer__left-col,
@@ -28,7 +29,6 @@
 
 .footer__right-col {
   justify-content: end;
-  // align-items: flex-end;
 }
 
 .footer__map {
@@ -65,11 +65,14 @@
   font-family: GilroyRegular, sans-serif;
 }
 
+.footer__info {
+  margin-right: 40px;
+}
+
 .footer__contacts {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-right: 40px;
 }
 
 .footer__contacts a {
@@ -80,7 +83,7 @@
   margin-top: 10px;
 }
 
-.footer__social {
+.footer__buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -89,16 +92,24 @@
 .social__list {
   list-style: none;
   display: flex;
-  width: 70%;
+  // width: 70%;
+  margin-bottom: 20px;
   justify-content: space-between;
 }
 
-.footer__social .social__list-item {
+.social__list-item img {
+  transition: all 0.2s ease-in-out;
+}
+.social__list-item:hover img {
+  transform: scale(1.2);
+}
+
+.social__list-item {
   border-color: #fff;
 }
 
 .footer__button {
-  margin-top: 20px;
+  // margin-top: 20px;
   cursor: pointer;
   font-size: 20px;
   color: #ffffff;
@@ -108,6 +119,12 @@
   border-radius: 10px;
   padding: 12px 33px 15px;
   transition: all 0.3s ease-in-out;
+
+  padding: 10px 30px;
+  min-width: 240px;
+}
+.footer__button-1 {
+  margin-bottom: 15px;
 }
 
 .footer__button:hover {
@@ -123,20 +140,28 @@
   color: #fff;
 }
 
+.footer-modal {
+  min-height: 480px;
+}
+
 @media (max-width: 1200px) {
   .footer__left-col {
     flex-direction: column-reverse;
-    align-items: flex-start;
+    align-items: center;
   }
   .footer__right-col {
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
   }
 
   .footer__address {
     margin-bottom: 30px;
+    margin-right: 50px;
     text-align: center;
     min-width: 150px;
+  }
+  .footer__map {
+    margin-right: 50px;
   }
 
   .footer__contacts {
@@ -145,6 +170,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .footer__info,
+  .footer__buttons {
+    margin: 0 0 0 50px;
+  }
+  .footer__info {
+    min-width: 240px;
+  }
+  .social__list {
+    max-width: 180px;
+    margin: 0 auto 20px;
   }
 }
 
@@ -161,24 +197,69 @@
   .footer--decor {
     height: 40px;
   }
-  .footer__social,
+
+  .footer__left-col {
+    align-items: flex-start;
+  }
+  .footer__right-col {
+    align-items: flex-end;
+  }
+
   .footer__map {
-    display: none;
+    margin-right: 0;
   }
 
   .footer__address {
-    text-align: left;
-    margin-bottom: 0;
-    min-width: auto;
+    margin: 0 0 20px 0;
   }
   .footer__contacts {
-    align-items: flex-end;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     min-width: auto;
   }
 
   .footer__logo img {
     width: 100px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer__wrapper {
+    align-items: flex-end;
+  }
+  .footer__map {
+    display: none;
+  }
+  .footer__address {
+    margin-bottom: 60px;
+    min-width: 180px;
+  }
+  .footer__info {
+    margin: 0;
+    min-width: 180px;
+  }
+  .footer__contacts {
+    margin-bottom: 15px;
+  }
+  .social__list {
+    max-width: 160px;
+    margin: 0 auto 15px;
+  }
+  .footer__contacts a + a {
+    margin-top: 0;
+  }
+  .footer__buttons {
+    margin: 0;
+  }
+  .footer__button {
+    min-width: 180px;
+    padding: 10px 20px;
+    font-size: 16px;
+    margin: 0;
+  }
+  .footer__button-2 {
+    position: absolute;
+    left: 0;
+    bottom: 0;
   }
 }
 
@@ -189,29 +270,70 @@
   .footer__logo img {
     width: 70px;
   }
+  .social__list {
+    max-width: 145px;
+    margin: 0 auto 10px;
+  }
 }
 
 @media (max-width: 550px) {
   .footer {
     padding-bottom: 15px;
   }
-  .footer--decor {
-    height: 20px;
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: inherit;
   }
-  .footer__logo img {
-    width: 60px;
+
+  .footer__logo {
+    order: -1;
+    margin-bottom: 20px;
+    max-width: 60px;
+    margin: 0 auto;
+    img {
+      width: 60px;
+      height: auto;
+    }
   }
-  .footer__contacts,
+  .footer__info {
+    position: absolute;
+    right: 0;
+    top: 100px;
+  }
+  .footer__button-2 {
+    margin-top: 10px;
+    position: relative;
+  }
+  .footer__buttons,
+  .footer__button {
+    width: 100%;
+  }
+
   .footer__address {
     font-size: 15px;
+    text-align: left;
+    margin: 15px 0 30px;
+
+    h6 {
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
   }
-  .footer__address h6 {
-    font-size: 18px;
-    margin-bottom: 5px;
+  .social__list {
+    margin: 0 0 10px auto;
+  }
+  .footer__contacts {
+    font-size: 15px;
+    align-items: flex-end;
   }
   .footer__contacts a + a {
     margin-top: 6px;
   }
+
+  .footer--decor {
+    height: 20px;
+  }
+
   .footer__copyright {
     font-size: 14px;
     padding-top: 15px;
@@ -227,7 +349,7 @@
     font-size: 14px;
   }
   .footer__logo img {
-    width: 50px;
+    // width: 50px;
   }
 }
 
