--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -52,8 +52,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
   font-family: GilroyBold, sans-serif;
+  margin-bottom: 30px;
   font-size: 26px;
 }
 
@@ -108,5 +108,14 @@
   to {
     opacity: 0;
     transform: scale(0.5);
+  }
+}
+
+@media (max-width: 550px) {
+  .modal {
+    max-height: 100vh;
+    height: 100%;
+    border-radius: 0;
+    overflow-x: auto;
   }
 }
