--- a/src/components/TeachersSchedule/TeachersSchedule.module.scss
+++ b/src/components/TeachersSchedule/TeachersSchedule.module.scss
@@ -15,7 +15,7 @@
 
 .section-name {
   font-size: 24px;
-  font-family: 'GilroyBold', sans-serif;
+  font-family: "GilroyBold", sans-serif;
   background-color: var(--gray-color);
   color: var(--primary-color);
   text-align: center;
@@ -27,4 +27,30 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   margin-bottom: 30px;
+}
+
+@media (max-width: 1024px) {
+  .section-items {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media (max-width: 924px) {
+  .section-items {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .section-items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 540px) {
+  .section-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 375px) {
+  .section-items {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
