--- a/src/pages/rozklad/Rozklad.module.scss
+++ b/src/pages/rozklad/Rozklad.module.scss
@@ -15,7 +15,7 @@
 
 .section-name {
   font-size: 24px;
-  font-family: 'GilroyBold', sans-serif;
+  font-family: "GilroyBold", sans-serif;
   background-color: var(--gray-color);
   color: var(--primary-color);
   text-align: center;
